--- a/lib/composer.json
+++ b/lib/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "^3.0",
         "firebase/php-jwt": "^5.0",
         "phpmailer/phpmailer": "^6.0",
-        "pagseguro/pagseguro-php-sdk": "^4.2"
+        "pagseguro/pagseguro-php-sdk": "^4.2",
+        "sngrl/php-firebase-cloud-messaging": "dev-master"
     }
 }
