--- a/lib/composer.json
+++ b/lib/composer.json
@@ -3,7 +3,11 @@
         "slim/slim": "^3.0",
         "firebase/php-jwt": "^5.0",
         "phpmailer/phpmailer": "^6.0",
-        "pagseguro/pagseguro-php-sdk": "^4.2",
+        "pagseguro/pagseguro-php-sdk": "^4.2"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require-dev": {
         "sngrl/php-firebase-cloud-messaging": "dev-master"
     }
 }
